agrego articles y modifico p / span

--- a/views/home.html
+++ b/views/home.html
@@ -28,47 +28,63 @@
       <main>
         <section>
           <h3>Basado en tu última vista</h3>
-            <div><img src="/images/img-cafetera-moulinex.jpg" width="240" alt="imagen img-cafetera-moulinex"></div>
-            <div>$6770</div>
-            <div>40 % OFF</div>
+          <article>
+          <div><img src="/images/img-cafetera-moulinex.jpg" width="240" alt="imagen img-cafetera-moulinex"></div>
+            <p>$6770</p>
+            <span>40 % OFF</span>
             <div><h4>Cafetera Moulinex</h4></div>
+          </article>  
             
+            <article>
             <div><img src="/images/img-macbook-pro-2019.jpg" width="240" alt="imagen img-macbook-pro-2019"></div>
-            <div>$230000</div>
-            <div>20 % OFF</div>
+            <p>$230000</p>
+            <span>20 % OFF</span>
             <div><h4>MacBook Pro 2019</h4></div>
+          </article>
             
+            <article>
             <div><img src="/images/img-samsung-galaxy-s10.jpg" width="240" alt="imagen img-samsung-galaxy-s10"></div>
-            <div>$70500</div>
-            <div>10 % OFF</div>
+            <p>$70500</p>
+            <span>10 % OFF</span>
             <div><h4>Samsung Galaxy S10</h4></div>
+          </article>
             
+            <article>
             <div><img src="/images/img-tv-samsung-smart.jpg" width="240" alt="imagen img-tv-samsung-smart"></div>
-            <div>$23200</div>
-            <div>5 % OFF</div>
+            <p>$23200</p>
+            <span>5 % OFF</span>
             <div><h4>SmartTv Samsung 43"</h4></div>
+          </article>
         </section>
         <section>
           <h3>Sección de ofertas</h3>  
+          <article>
           <div><img src="/images/img-cafetera-moulinex.jpg" width="240" alt="imagen img-cafetera-moulinex"></div>
-          <div>$6770</div>
-          <div>40 % OFF</div>
+          <p>$6770</p>
+          <span>40 % OFF</span>
           <div><h4>Cafetera Moulinex</h4></div>
+        </article>
 
+          <article>
           <div><img src="/images/img-macbook-pro-2019.jpg" width="240" alt="imagen img-macbook-pro-2019"></div>
-            <div>$230000</div>
-            <div>20 % OFF</div>
+            <p>$230000</p>
+            <span>20 % OFF</span>
             <div><h4>MacBook Pro 2019</h4></div>
+          </article>
             
+            <article>
             <div><img src="/images/img-samsung-galaxy-s10.jpg" width="240" alt="imagen img-samsung-galaxy-s10"></div>
-            <div>$70500</div>
-            <div>10 % OFF</div>
+            <p>$70500</p>
+            <span>10 % OFF</span>
             <div><h4>Samsung Galaxy S10</h4></div>
+          </article>
             
+            <article>
             <div><img src="/images/img-tv-samsung-smart.jpg" width="240" alt="imagen img-tv-samsung-smart"></div>
-            <div>$23200</div>
-            <div>5 % OFF</div>
+            <p>$23200</p>
+            <span>5 % OFF</span>
             <div><h4>SmartTv Samsung 43"</h4></div>
+          </article>
         </section>
 
     </main>
